Match-id-c369ac864d4891a35d96982d00d6742981e11e85

--- a/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
+++ b/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
@@ -32,6 +32,7 @@
     - name: Init cluster
       shell:
         cmd:
+          unset http_proxy https_proxy;
           kubeadm init --kubernetes-version=v1.17.3
             --node-name={{ ansible_hostname }}
             --pod-network-cidr=192.168.0.0/16
