Match-id-c7c3d8d7730e4599495dfaec3ffe797f634d9432

--- a/mindx-dl/deploy/online/steps/set_global_env.yaml
+++ b/mindx-dl/deploy/online/steps/set_global_env.yaml
@@ -105,7 +105,7 @@
       replace:
         path: /etc/profile
         regexp: '(export no_proxy)(.*)'
-        replace: '\1\2,{{ master_ip }}'
+        replace: '\1\2,ansible_default_ipv4.address"
       when:
         - has_no_proxy_var.stdout != ""
         - ansible_default_ipv4['address'] not in has_no_proxy_var.stdout
@@ -117,7 +117,7 @@
     - name: Add no proxy ip
       lineinfile:
         path: /etc/profile
-        line: 'export no_proxy={{ master_ip }}'
+        line: 'export no_proxy={{ ansible_default_ipv4.address }}'
       when: has_no_proxy_var.stdout == ""
       tags:
         - basic_only
