--- a/mindx-dl/deploy/online/steps/init_kubernetes.yaml
+++ b/mindx-dl/deploy/online/steps/init_kubernetes.yaml
@@ -138,7 +138,7 @@
         cmd:
           unset http_proxy https_proxy;
           kubectl label nodes {{ items }} node-role.kubernetes.io/worker=worker --overwrite=true;
-          kubectl label nodes {{ items }} workerselector=dls-worker-node --overwrite=true;
+          kubectl label nodes {{ items }} workerselector=dls-worker-node --overwrite=true
       tags:
         - init-workers
         - basic_only
@@ -148,7 +148,7 @@
       shell:
         cmd:
           unset http_proxy https_proxy;
-          kubectl label nodes {{ items }} accelerator=huawei-Ascend910 --overwrite=true;
+          kubectl label nodes {{ items }} accelerator=huawei-Ascend910 --overwrite=true
       tags:
         - init-workers
         - basic_only
@@ -158,7 +158,7 @@
       shell:
         cmd:
           unset http_proxy https_proxy;
-          kubectl label nodes {{ items }} accelerator=huawei-Ascend310 --overwrite=true;
+          kubectl label nodes {{ items }} accelerator=huawei-Ascend310 --overwrite=true
       tags:
         - init-workers
         - basic_only
