Match-id-81748eebef0e791a26ee0a35b2bf43aca97c5804

--- a/mindx-dl/uninstall/uninstall.yaml
+++ b/mindx-dl/uninstall/uninstall.yaml
@@ -274,6 +274,7 @@
       shell:
         cmd:
           systemctl stop nfs-server
+      ignore_errors: True
       when:
         - whether_uninstall_nfs == true
 
