--- a/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
+++ b/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
@@ -129,167 +129,58 @@
       when:
         - ansible_default_ipv4['address'] != master_ip
 
-    # copy local admin.conf to workers
-    - name: copy local kubelet.conf to workers
-      copy:
-        src: /etc/kubernetes/admin.conf
-        dest: /etc/kubernetes/
-        force: yes
-      tags:
-        - init-workers
-        - basic_only
-      when:
-        - ansible_default_ipv4['address'] != master_ip
-
-    - name: Replace config
-      shell:
-        cmd:
-          mkdir -p ~/.kube;
-          cp -f ~/.kube/config ~/.kube/config_bak || true;
-          cp -f /etc/kubernetes/admin.conf ~/.kube/config
-      tags:
-        - init-workers
-        - basic_only
-      when:
-        - ansible_default_ipv4['address'] != master_ip
-
-    - name: Delete config
-      lineinfile:
-        path: /etc/profile
-        line: "export KUBECONFIG=/etc/kubernetes/kubelet.conf"
-        state: absent
-      tags:
-        - init-workers
-        - basic_only
-      when:
-        - ansible_default_ipv4['address'] != master_ip
-
-    - name: Add config
-      lineinfile:
-        path: /etc/profile
-        line: "export KUBECONFIG=/etc/kubernetes/admin.conf"
-        state: present
-      tags:
-        - init-workers
-        - basic_only
-      when:
-        - ansible_default_ipv4['address'] != master_ip
-
-    - name: Enable /etc/profile
-      shell:
-        cmd:
-          source /etc/profile;
-          systemctl daemon-reload;
-          systemctl restart kubelet
-      args:
-        executable: "/bin/bash"
-      tags:
-        - init-workers
-        - basic_only
-      when:
-        - ansible_default_ipv4['address'] != master_ip
-
 # Labeling Work Nodes
-- hosts: localnode, workers
+- hosts: localnode, master
   remote_user: root
 
   tasks:
-    - name: Label training nodes - arm64
+    - name: Label worker nodes
       shell:
         cmd:
           unset http_proxy https_proxy;
-          kubectl label nodes {{ansible_hostname}} node-role.kubernetes.io/worker=worker --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} workerselector=dls-worker-node --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} accelerator=huawei-Ascend910 --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} host-arch=huawei-arm --overwrite=true
+          kubectl label nodes {{ item }} node-role.kubernetes.io/worker=worker --overwrite=true;
+          kubectl label nodes {{ item }} workerselector=dls-worker-node --overwrite=true;
       tags:
         - init-workers
         - basic_only
-      when:
-        - ansible_architecture == "aarch64"
-        - ansible_hostname in groups['training_node']
+      with_items: "{{ groups['workers'] }}"
 
-    - name: Label training nodes - x86_64
+    - name: Label training nodes
       shell:
         cmd:
           unset http_proxy https_proxy;
-          kubectl label nodes {{ansible_hostname}} node-role.kubernetes.io/worker=worker --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} workerselector=dls-worker-node --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} accelerator=huawei-Ascend910 --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} host-arch=huawei-x86 --overwrite=true
+          kubectl label nodes {{ item }} accelerator=huawei-Ascend910 --overwrite=true
       tags:
         - init-workers
         - basic_only
-      when:
-        - ansible_architecture == "x86_64"
-        - ansible_hostname in groups['training_node']
+      with_items: "{{ groups['training_node'] }}"
 
-    - name: Label inference nodes - arm64
+    - name: Label inference nodes
       shell:
         cmd:
           unset http_proxy https_proxy;
-          kubectl label nodes {{ansible_hostname}} node-role.kubernetes.io/worker=worker --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} workerselector=dls-worker-node --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} accelerator=huawei-Ascend310 --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} host-arch=huawei-arm --overwrite=true
+          kubectl label nodes {{ item }} accelerator=huawei-Ascend310 --overwrite=true
       tags:
         - init-workers
         - basic_only
-      when:
-        - ansible_architecture == "aarch64"
-        - ansible_hostname in groups['inference_node']
+      with_items: "{{ groups['inference_node'] }}"
 
-    - name: Label inference nodes - x86_64
+    - name: Label arm nodes
       shell:
         cmd:
           unset http_proxy https_proxy;
-          kubectl label nodes {{ansible_hostname}} node-role.kubernetes.io/worker=worker --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} workerselector=dls-worker-node --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} accelerator=huawei-Ascend310 --overwrite=true;
-          kubectl label nodes {{ansible_hostname}} host-arch=huawei-x86 --overwrite=true
+          kubectl label nodes {{ item }} host-arch=huawei-arm --overwrite=true
       tags:
         - init-workers
         - basic_only
-      when:
-        - ansible_architecture == "x86_64"
-        - ansible_hostname in groups['inference_node']
+      with_items: "{{ groups['arm'] }}"
 
-# Restore the K8s permission of the worker node.
-- hosts: workers
-  remote_user: root
-
-  tasks:
-    - name: Replace config
+    - name: Label x86 nodes
       shell:
         cmd:
-          cp -f /etc/kubernetes/kubelet.conf ~/.kube/config || mv -f ~/.kube/config_bak ~/.kube/config
+          unset http_proxy https_proxy;
+          kubectl label nodes {{ item }} host-arch=huawei-x86 --overwrite=true
       tags:
         - init-workers
         - basic_only
-      when:
-        - ansible_default_ipv4['address'] != master_ip
-
-    - name: Add worker kubeconfig file
-      lineinfile:
-        path: /etc/profile
-        regexp: 'export KUBECONFIG(.*)=(.*)/etc'
-        line: 'export KUBECONFIG=/etc/kubernetes/kubelet.conf'
-      tags:
-        - init-workers
-        - basic_only
-      when:
-        - ansible_default_ipv4['address'] != master_ip
-
-    - name: Enable /etc/profile
-      shell:
-        cmd:
-          source /etc/profile
-          systemctl daemon-reload;
-          systemctl restart kubelet;
-      args:
-        executable: "/bin/bash"
-      tags:
-        - init-workers
-        - basic_only
-      when:
-        - ansible_default_ipv4['address'] != master_ip
+      with_items: "{{ groups['x86'] }}"
