Match-id-9863a960b371e2343aecc5445e99583930e0d658

--- a/mindx-dl/deploy/online/online_join_cluster.yaml
+++ b/mindx-dl/deploy/online/online_join_cluster.yaml
@@ -805,7 +805,7 @@
 - hosts: master
   remote_user: root
   vars:
-    deploy_yaml_dir: "{{ dls_root_dir }}/yaml"
+    deploy_yaml_dir: "{{ dls_root_dir }}/yamls"
 
   tasks:
     - name: Deploy device plugin
