--- a/mindx-dl/deploy/online/steps/clean_services.yaml
+++ b/mindx-dl/deploy/online/steps/clean_services.yaml
@@ -5,7 +5,7 @@
 - hosts: localnode, master
   remote_user: root
   vars:
-    deploy_yaml_dir: "{{ dls_root_dir }}/yaml"
+    deploy_yaml_dir: "{{ dls_root_dir }}/yamls"
 
   tasks:
   - name: remove volcano
