Match-id-f7a878b800aba109bd95fedea8bc5789d1e7fafd

--- a/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
+++ b/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
@@ -82,6 +82,7 @@
     - name: Label master node
       shell:
         cmd:
+          unset http_proxy https_proxy;
           kubectl label nodes {{ ansible_hostname }} masterselector=dls-master-node --overwrite=true
       tags:
         - init-master
