--- a/mindx-dl/deploy/online/steps/online_deploy_service.yaml
+++ b/mindx-dl/deploy/online/steps/online_deploy_service.yaml
@@ -115,7 +115,7 @@
         cmd: kubectl apply -f volcano-*.yaml
 
 # After the deployment is successful, delete the installation package.
-- hosts: localnode, workers
+- hosts: localnode, cluster
   remote_user: root
 
   tasks:
