--- a/mindx-dl/deploy/online/steps/online_load_images.yaml
+++ b/mindx-dl/deploy/online/steps/online_load_images.yaml
@@ -87,7 +87,7 @@
     - name: Pull mindx images - arm64
       shell:
         cmd:
-          docker pull {{ ascend_hub_prefix }}/{{ item }}
+          docker pull {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - vc-controller-manager_arm64:{{ volcano_version }}
         - vc-scheduler_arm64:{{ volcano_version }}
@@ -101,7 +101,7 @@
     - name: Pull mindx images - x86_64
       shell:
         cmd:
-          docker pull {{ ascend_hub_prefix }}/{{ item }}
+          docker pull {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - vc-controller-manager_amd64:{{ volcano_version }}
         - vc-scheduler_amd64:{{ volcano_version }}
@@ -115,7 +115,7 @@
     - name: Tag mindx images - arm64
       shell:
         cmd:
-          docker tag {{ ascend_hub_prefix }}/{{ item }}
+          docker tag {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - vc-controller-manager_arm64:{{ volcano_version }} volcanosh/vc-controller-manager:{{ volcano_version }}
         - vc-scheduler_arm64:{{ volcano_version }} volcanosh/vc-scheduler:{{ volcano_version }}
@@ -129,7 +129,7 @@
     - name: Tag mindx images - x86_64
       shell:
         cmd:
-          docker tag {{ ascend_hub_prefix }}/{{ item }}
+          docker tag {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - vc-controller-manager_amd64:{{ volcano_version }} volcanosh/vc-controller-manager:{{ volcano_version }}
         - vc-scheduler_amd64:{{ volcano_version }} volcanosh/vc-scheduler:{{ volcano_version }}
@@ -221,7 +221,7 @@
     - name: Pull mindx images - arm64
       shell:
         cmd:
-          docker pull {{ ascend_hub_prefix }}/{{ item }}
+          docker pull {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - ascend-k8sdeviceplugin_arm64:{{ deviceplugin_version }}
         - cadvisor_arm64:{{ cadvisor_version }}
@@ -232,7 +232,7 @@
     - name: Pull mindx images - x86_64
       shell:
         cmd:
-          docker pull {{ ascend_hub_prefix }}/{{ item }}
+          docker pull {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - ascend-k8sdeviceplugin_amd64:{{ deviceplugin_version }}
         - cadvisor_amd64:{{ cadvisor_version }}
@@ -243,7 +243,7 @@
     - name: Tag mindx images - arm64
       shell:
         cmd:
-          docker tag {{ ascend_hub_prefix }}/{{ item }}
+          docker tag {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - ascend-k8sdeviceplugin_arm64:{{ deviceplugin_version }} ascend-k8sdeviceplugin:{{ deviceplugin_version }}
         - cadvisor_arm64:{{ cadvisor_version }} google/cadvisor:{{ cadvisor_version }}
@@ -254,7 +254,7 @@
     - name: Tag mindx images - x86_64
       shell:
         cmd:
-          docker tag {{ ascend_hub_prefix }}/{{ item }}
+          docker tag {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - ascend-k8sdeviceplugin_amd64:{{ deviceplugin_version }} ascend-k8sdeviceplugin:{{ deviceplugin_version }}
         - cadvisor_amd64:{{ cadvisor_version }} google/cadvisor:{{ cadvisor_version }}
@@ -301,7 +301,7 @@
     - name: Remove redundant images - arm64
       shell:
         cmd:
-          docker rmi {{ ascend_hub_prefix }}/{{ item }}
+          docker rmi {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - vc-controller-manager_arm64:{{ volcano_version }}
         - vc-scheduler_arm64:{{ volcano_version }}
@@ -315,7 +315,7 @@
     - name: Remove redundant images - x86_64
       shell:
         cmd:
-          docker rmi {{ ascend_hub_prefix }}/{{ item }}
+          docker rmi {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - vc-controller-manager_amd64:{{ volcano_version }}
         - vc-scheduler_amd64:{{ volcano_version }}
@@ -355,7 +355,7 @@
     - name: Workers remove redundant images - arm64
       shell:
         cmd:
-          docker rmi {{ ascend_hub_prefix }}/{{ item }}
+          docker rmi {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - ascend-k8sdeviceplugin_arm64:{{ deviceplugin_version }}
         - cadvisor_arm64:{{ cadvisor_version }}
@@ -366,7 +366,7 @@
     - name: Workers remove redundant images - x86_64
       shell:
         cmd:
-          docker rmi {{ ascend_hub_prefix }}/{{ item }}
+          docker rmi {{ ascendhub_prefix }}/{{ item }}
       with_items:
         - ascend-k8sdeviceplugin_amd64:{{ deviceplugin_version }}
         - cadvisor_amd64:{{ cadvisor_version }}
