--- a/mindx-dl/deploy/yamls/hccl-controller-v20.2.0.yaml
+++ b/mindx-dl/deploy/yamls/hccl-controller-v20.2.0.yaml
@@ -1,3 +1,22 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: hccl-controller
+  namespace: default
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: hccl-controller-rolebinding
+subjects:
+  - kind: ServiceAccount
+    name: hccl-controller
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,33 +35,28 @@ spec:
         masterselector: dls-master-node
       serviceAccountName: hccl-controller
       containers:
-      - name: hccl-controller
-        image: hccl-controller:v20.2.0
-        resources:
-          requests:
+        - name: hccl-controller
+          image: hccl-controller:v20.2.0
+          resources:
+            requests:
               memory: 300Mi
               cpu: 500m
-          limits:
+            limits:
               memory: 300Mi
               cpu: 500m
-        imagePullPolicy: Never
-        command: [ "/bin/bash", "-c", "--"]
-        args: ["umask 027;hccl-controller --logtostderr=false --log_dir=/var/log/atlas_dls/hccl-controller
+          imagePullPolicy: Never
+          command: [ "/bin/bash", "-c", "--"]
+          args: ["umask 027;hccl-controller --logtostderr=false --log_dir=/var/log/atlas_dls/hccl-controller
          --log_file=/var/log/atlas_dls/hccl-controller/hccl-controller.log  --stderrthreshold=1 -v=5" ]
-        volumeMounts:
-          - name: device-hcclcontroller
-            mountPath: /var/log/atlas_dls/hccl-controller
-          - name: timezone
-            mountPath: /etc/timezone
-          - name: localtime
-            mountPath: /etc/localtime
+          volumeMounts:
+            - name: device-hcclcontroller
+              mountPath: /var/log/atlas_dls/hccl-controller
+            - name: localtime
+              mountPath: /etc/localtime
       volumes:
         - name: device-hcclcontroller
           hostPath:
             path: /var/log/atlas_dls/hccl-controller
-        - name: timezone
-          hostPath:
-            path: /etc/timezone
         - name: localtime
           hostPath:
             path: /etc/localtime
