--- a/mindx-dl/deploy/offline/steps/offline_install_packages.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_install_packages.yaml
@@ -109,7 +109,7 @@
     ############################# Install Docker ######################################
     - name: Install prerequisite software - Ubuntu
       shell:
-        chdir: "{{dls_root_dir}}/base_software/docker"
+        chdir: "{{dls_root_dir}}/base_software/"
         cmd:
           dpkg -i libltdl7*
       when:
@@ -118,7 +118,7 @@
 
     - name: Install docker engine - Ubuntu
       shell:
-        chdir: "{{dls_root_dir}}/base_software/docker"
+        chdir: "{{dls_root_dir}}/base_software/"
         cmd:
           dpkg -i docker-ce_18.06.3*
       when:
@@ -221,7 +221,7 @@
     ############################## Install Kubernetes #################################
     - name: Install k8s server
       shell:
-        chdir: "{{dls_root_dir}}/base_software/kubernetes"
+        chdir: "{{dls_root_dir}}/base_software/"
         cmd:
           dpkg -i cri-tools* conntrack* socat*;
           dpkg -i kubernetes-cni*;
